// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-form/all fields Autocomplete 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-dropdown m--has-placeholder-icon"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Autocomplete
              </span>
               
              <sup
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__placeholder-icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <input
                aria-controls="mDropdown-fakeId-controls"
                aria-haspopup="true"
                autocomplete="new-password"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                readonly="readonly"
                type="text"
              />
               
              <!---->
               
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Checkbox 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-checkbox m--is-checkbox-left"
  >
    <input
      class="m-checkbox__hidden"
      id="mCheckbox-fakeId"
      type="checkbox"
    />
     
    <!---->
     
    <label
      class="m-checkbox__wrap"
      for="mCheckbox-fakeId"
    >
      <span
        aria-hidden="true"
        class="m-checkbox__input"
      >
        <span
          class="m-checkbox__input__icon"
        />
      </span>
       
      <div
        class="m-checkbox__label"
      >
        Is active ?
      </div>
    </label>
     
    <div
      class="m-validation-message m-checkbox__message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Datepicker 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-label m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDatepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Birthdate
              </span>
               
              <sup
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-haspopup="true"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mDatepicker-fakeId"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-datepicker__validation"
    >
      <div
        class="m-validation-message m-datepicker__validation__message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Daterangepicker 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-periodpicker"
  >
    <div
      class="m-periodpicker__body"
    >
      <div
        class="m-periodpicker__item"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-datepicker"
          style="width: 100%; max-width: 136px;"
        >
          <div
            class="m-input-style m--has-label m--is-tag-default"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <label
                  class="m-input-style__label"
                  for="mDatepicker-fakeId"
                  style="margin-right: 0px;"
                >
                  <span
                    class="m-input-style__text"
                  >
                    <span>
                      Du
                    </span>
                     
                    <!---->
                  </span>
                </label>
                 
                <div
                  class="m-input-style__input"
                >
                  <!---->
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      aria-haspopup="true"
                      autocomplete="off"
                      id="mDatepicker-fakeId"
                      placeholder="AAAA-MM-JJ"
                    />
                      
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <button
                      aria-controls="mDatepicker-fakeId"
                      class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                      style="width: 22px; height: 22px;"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-icon-button__icon"
                        height="20px"
                        width="20px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                       
                      <!---->
                    </button>
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-datepicker__validation"
          >
            <div
              class="m-validation-message m-datepicker__validation__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-popup"
          >
            <div
              class="m-popper"
            >
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-periodpicker__item"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-datepicker"
          style="width: 100%; max-width: 136px;"
        >
          <div
            class="m-input-style m--has-label m--is-tag-default"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <label
                  class="m-input-style__label"
                  for="mDatepicker-fakeId"
                  style="margin-right: 0px;"
                >
                  <span
                    class="m-input-style__text"
                  >
                    <span>
                      Au
                    </span>
                     
                    <!---->
                  </span>
                </label>
                 
                <div
                  class="m-input-style__input"
                >
                  <!---->
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      aria-haspopup="true"
                      autocomplete="off"
                      id="mDatepicker-fakeId"
                      placeholder="AAAA-MM-JJ"
                    />
                      
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <button
                      aria-controls="mDatepicker-fakeId"
                      class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                      style="width: 22px; height: 22px;"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-icon-button__icon"
                        height="20px"
                        width="20px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                       
                      <!---->
                    </button>
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-datepicker__validation"
          >
            <div
              class="m-validation-message m-datepicker__validation__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-popup"
          >
            <div
              class="m-popper"
            >
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Decimalfield 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-decimalfield m--has-label"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--has-label m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDecimalfield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Decimal
              </span>
               
              <sup
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
               
              <input
                class="m-decimalfield__input"
                id="mDecimalfield-fakeId"
                inputmode="decimal"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-decimalfield__validation"
    >
      <div
        class="m-validation-message m-decimalfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Dropdown 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Type
              </span>
               
              <sup
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-controls="mDropdown-fakeId-controls"
                aria-haspopup="true"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                readonly="readonly"
                type="text"
              />
               
              <!---->
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-dropdown__arrow__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Integerfield 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-integerfield m--has-label"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--has-label m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mIntegerfield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Integer
              </span>
               
              <sup
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
               
              <input
                class="m-integerfield__input"
                id="mIntegerfield-fakeId"
                inputmode="decimal"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-integerfield__validation"
    >
      <div
        class="m-validation-message m-integerfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Moneyfield 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-moneyfield"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-decimalfield m--has-label"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mDecimalfield-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Price
                </span>
                 
                <sup
                  class="m-input-style__required-marker"
                >
                  *
                </sup>
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                />
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-decimalfield__validation"
      >
        <div
          class="m-validation-message m-decimalfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Multi Select 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-base-select"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select"
        style="width: 100%; max-width: 288px;"
        tabindex="0"
      >
        <div
          class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    La famille Von Trapp
                  </span>
                   
                  <sup
                    class="m-input-style__required-marker"
                  >
                    *
                  </sup>
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-multi-select__chips"
                  >
                    <input
                      readonly="readonly"
                      type="text"
                    />
                     
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__arrow"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__arrow__icon"
                      height="16px"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-multi-select__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Radio 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-radio-group"
  >
    <div
      class="m-input-group"
    >
      <p
        class="m-input-group__label"
        id="fakeId"
      >
        Style de coupe
        <!---->
         
        <!---->
      </p>
       
      <div
        class="m-input-group__body"
      >
        <div
          class="m-validation-message m-input-group__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <div
          aria-labelledby="fakeId"
          class="m-input-group__content"
        >
           
          <ul
            class="m-radio-group__body"
            role="radiogroup"
          >
            <li
              class="m-radio"
            >
              <input
                class="m-radio__hidden"
                id="fakeId"
                name="fakeId"
                type="radio"
                value="régulière"
              />
               
              <label
                class="m-radio__wrap"
                for="fakeId"
              >
                <span
                  aria-hidden="true"
                  class="m-radio__input"
                />
                 
                <span
                  class="m-radio__label"
                >
                  régulière
                </span>
              </label>
            </li>
            <li
              class="m-radio"
            >
              <input
                class="m-radio__hidden"
                id="fakeId"
                name="fakeId"
                type="radio"
                value="julienne"
              />
               
              <label
                class="m-radio__wrap"
                for="fakeId"
              >
                <span
                  aria-hidden="true"
                  class="m-radio__input"
                />
                 
                <span
                  class="m-radio__label"
                >
                  julienne
                </span>
              </label>
            </li>
            <li
              class="m-radio"
            >
              <input
                class="m-radio__hidden"
                id="fakeId"
                name="fakeId"
                type="radio"
                value="ondulé"
              />
               
              <label
                class="m-radio__wrap"
                for="fakeId"
              >
                <span
                  aria-hidden="true"
                  class="m-radio__input"
                />
                 
                <span
                  class="m-radio__label"
                >
                  ondulé
                </span>
              </label>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Switchs 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-switch m--is-switch-left"
  >
    <input
      class="m-switch__hidden"
      id="switchfakeId"
      type="checkbox"
    />
     
    <label
      class="m-switch__body"
      for="switchfakeId"
    >
      <span
        aria-hidden="true"
        class="m-switch__input"
      >
        <span
          class="m-switch__button"
        />
         
        <span
          class="m-switch__text"
        >
          <!---->
           
          <span>
            <span
              class="m-i18n"
            >
              Non
            </span>
          </span>
        </span>
      </span>
       
      <span
        class="m-switch__label"
      >
        État
      </span>
    </label>
     
    <div
      class="m-validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Textarea 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-textarea m--has-label"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--has-label m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTextarea-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Description Field
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <textarea
                class="m-textarea__input"
                id="mTextarea-fakeId"
                maxlength="Infinity"
                rows="1"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-textarea__validation"
    >
      <div
        class="m-validation-message m-textarea__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
    >
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 100000px; height: 100000px;"
        />
      </div>
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
      >
        <div
          style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%"
        />
      </div>
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Textfield 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-textfield m--has-label m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--has-label m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTextfield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                text field
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                class="m-textfield__input"
                id="mTextfield-fakeId"
                maxlength="Infinity"
                type="text"
              />
                 
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Timepicker 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-label m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Time
              </span>
               
              <sup
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;
